:sparkles: html mock

--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
   </head>
   <body>
     <script type="module" src="/src/main.ts"></script>
+
     <div class="container">
-      Container
-      <span class="icon-plus"></span>
+      <button class="">Add status</button>
+
+      <div class="">
+        <span class="">
+          <span class="" />
+        </span>
+        <span>Thomas</span>
+        <span>In a meeting</span>
+      </div>
     </div>
   </body>
 </html>
