--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
       rel="stylesheet"
       href="node_modules/@appwrite.io/pink-icons/dist/icon.css"
     />
+    <script type="module" src="/src/main.ts"></script>
   </head>
   <body class="theme-dark">
-    <script type="module" src="/src/main.ts"></script>
-
     <div class="container">
       <button class="button">Add status</button>
 
@@ -52,6 +51,43 @@
         </div>
       </div>
     </div>
+
+    <dialog class="modal" id="dialog">
+      <form class="modal-form" method="dialog">
+        <header class="modal-header">
+          <div class="avatar is-color-orange is-medium">
+            <span class="icon-exclamation" aria-hidden="true"></span>
+          </div>
+
+          <h4 class="modal-title heading-level-5">Modal title</h4>
+
+          <button class="x-button" aria-label="Close modal">
+            <span class="icon-x" aria-hidden="true"></span>
+          </button>
+        </header>
+
+        <div class="modal-content u-small">Modal label text.</div>
+
+        <div class="modal-footer">
+          <div class="u-flex u-main-end u-gap-16">
+            <button class="button is-text">
+              <span class="text">Button</span></button
+            ><button class="button is-secondary">
+              <span class="text">Button</span>
+            </button>
+          </div>
+        </div>
+      </form>
+    </dialog>
+
+    <script>
+      const button = document.querySelector("button");
+      const dialog = document.getElementById("dialog");
+
+      button.addEventListener("click", () => {
+        dialog.showModal();
+      });
+    </script>
 
     <style>
       .icon-wrapper {
