--- a/index.html
+++ b/index.html
@@ -55,25 +55,49 @@
     <dialog class="modal" id="dialog">
       <form class="modal-form" method="dialog">
         <header class="modal-header">
-          <div class="avatar is-color-orange is-medium">
-            <span class="icon-exclamation" aria-hidden="true"></span>
-          </div>
-
           <h4 class="modal-title heading-level-5">Modal title</h4>
 
-          <button class="x-button" aria-label="Close modal">
+          <button
+            class="x-button close-modal"
+            aria-label="Close modal"
+            type="button"
+          >
             <span class="icon-x" aria-hidden="true"></span>
           </button>
         </header>
 
-        <div class="modal-content u-small">Modal label text.</div>
+        <div class="modal-content u-small">
+          <ul class="form-list">
+            <li class="form-item">
+              <label class="label is-required" for="name">Name</label>
+              <input
+                type="text"
+                class="input-text"
+                name="name"
+                placeholder="Jane Doe"
+                required
+              />
+            </li>
+            <li class="form-item">
+              <label class="label is-required" for="name">Text</label>
+              <input
+                type="text"
+                class="input-text"
+                name="text"
+                placeholder="👋 Good morning!"
+                required
+              />
+            </li>
+          </ul>
+        </div>
 
         <div class="modal-footer">
           <div class="u-flex u-main-end u-gap-16">
-            <button class="button is-text">
-              <span class="text">Button</span></button
-            ><button class="button is-secondary">
-              <span class="text">Button</span>
+            <button class="button is-text close-modal" type="button">
+              <span class="text">Cancel</span>
+            </button>
+            <button class="button is-secondary" type="submit">
+              <span class="text">Add</span>
             </button>
           </div>
         </div>
@@ -86,6 +110,14 @@
 
       button.addEventListener("click", () => {
         dialog.showModal();
+      });
+
+      const modalClosers = document.querySelectorAll(".close-modal");
+
+      modalClosers.forEach((modalCloser) => {
+        modalCloser.addEventListener("click", () => {
+          dialog.close();
+        });
       });
     </script>
 
