--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <div class="container">
       <button class="button">Add status</button>
 
-      <div class="u-flex u-flex-vertical u-gap-16 u-margin-block-start-32">
+      <div
+        id="status-feed"
+        class="u-flex u-flex-vertical u-gap-16 u-margin-block-start-32"
+      >
         <div class="box u-flex u-gap-16 u-cross-center">
           <div class="icon-wrapper">
             <span class="icon-chat" />
@@ -175,6 +178,32 @@
           });
         });
       });
+
+      // Submit
+      function handleSubmit(e) {
+        e.preventDefault();
+        const formData = new FormData(e.target);
+        const data = Object.fromEntries(formData);
+        console.log(data);
+
+        const feed = document.getElementById("status-feed");
+
+        feed.innerHTML = `
+          <div class="box u-flex u-gap-16 u-cross-center">
+            <div class="icon-wrapper">
+              <span class="icon-${data.icon}" />
+            </div>
+            <div class="u-flex u-flex-vertical u-gap-2">
+              <h6 class="heading-level-6">${data.name}</h6>
+              <span>${data.text}</span>
+            </div>
+          </div>
+          ${feed.innerHTML}
+
+        `;
+      }
+
+      document.querySelector("form").addEventListener("submit", handleSubmit);
     </script>
 
     <style>
@@ -184,20 +213,21 @@
 
         background-color: hsl(var(--color-neutral-300));
         border-radius: var(--border-radius-circular);
-        color: hsl(var(--color-primary-100));
 
         --size: 64px;
         width: var(--size);
         height: var(--size);
       }
 
-      /* Multiples of 2 */
-      :nth-child(2n) > .icon-wrapper {
+      :nth-child(3n + 1) > .icon-wrapper {
+        color: hsl(var(--color-primary-100));
+      }
+
+      :nth-child(3n + 2) > .icon-wrapper {
         color: hsl(var(--color-success-100));
       }
 
-      /* Multiples of 3 */
-      :nth-child(3n) > .icon-wrapper {
+      :nth-child(3n + 3) > .icon-wrapper {
         color: hsl(var(--color-information-100));
       }
     </style>
